# iron-emperor

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SKILL.md  benchmark.py  cli.py  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run.py  run_staged.py
docs/: ARCHITECTURE.md  PROTOCOL.md
examples/: prompts.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: LiveGraph.tsx  MatrixPanel.tsx  PartsGraph.tsx
frontend/src/lib/: api.ts  types.ts
schemas/: a2a-envelope.json  build-request.json  build-response.json
src/: __init__.py  config.py  errors.py  llm_client.py  logger.py  metrics.py  middleware.py  types.py  validators.py
src/agents/: orchestrator.py  parts_agent.py
src/agents/assembler/: __init__.py  assembly_agent.py
src/agents/cad/: __init__.py  cad_agent.py
src/agents/pcb/: __init__.py  pcb_agent.py
src/agents/quoter/: __init__.py  quoter_agent.py
src/api/: server.py
src/db/: schema.py
src/scraper/: __init__.py  lcsc_scraper.py
tests/: test_api.py  test_pipeline.py  test_validators.py
